# grcx

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo.cast  fly.toml  grcx.yaml  pyproject.toml  requirements.txt  start.sh
dashboard/: app.py
dashboard/templates/: dashboard.html  sign-in.html  sign-up.html
docs/: quickstart.md
grcx/: cli.py
grcx/audit/: log.py
grcx/controls/frameworks/: bcbs239.yaml  dora.yaml  fca_sysc.yaml  iso27001.yaml  mas_trm.yaml  nist_csf.yaml  soc2.yaml
grcx/resolver/: resolver.py
grcx/resolver/actions/: __init__.py
grcx/sentinel/: runner.py
grcx/sentinel/regulatory/: imap_email.py  rss.py
tests/: test_audit.py  test_resolver.py  test_rss_live.py
